# Pico

./: adc_tp.7z  adc_tp_Gonzalez.7z  tp_alarma.7z
Puls2_led_3Hz/: CMakeLists.txt  Puls2_led_3Hz.c  main.c
Puls_led_3Hz/: CMakeLists.txt  main.c
adc_tp/: CMakeLists.txt  funciones.c  funciones.h  hardware.h  main.c  promedios.c  promedios.h  test.c
ble_alarma/: CMakeLists.txt  server.c
ble_alarma2/: CMakeLists.txt  btstack_config.h  btstack_config_common.h  server.c
ble_alarma2/oled/: CMakeLists.txt
ble_alarma2_aegfags/: CMakeLists.txt  alarma_control.gatt
ble_alarma2_aegfags/oled/: picoOled.c  picoOled.h
blink_pwm/: CMakeLists.txt  main.c
blink_pwm_irq/: CMakeLists.txt  definiciones.h  funciones.c  funciones.h  main.c
dimmer_pwm/: CMakeLists.txt  definiciones.h  funciones.c  funciones.h  main.c  systick.c
examen_Gonzalez_Tomas/: CMakeLists.txt  definiciones.h  funciones.c  funciones.h  main.c  numeros.c  numeros.h  systick.c  systick.h
led_pulsador/: CMakeLists.txt  led_pulsador.c
parpadeo/: CMakeLists.txt  parpadeo.c
pico_ble_led/: CMakeLists.txt  led_control.gatt  server.c
picow_httpd/: CMakeLists.txt
prueba_oled/: CMakeLists.txt  main.c
secuencia_leds/: CMakeLists.txt  definiciones.h  funciones.c  funciones.h  main.c
tp_alarma/: CMakeLists.txt  definiciones.h  funciones.c  funciones.h  main.c  perifericos.h  uart.c  uart.h
